SERVER-86905 replace $$NOW and $$CLUSTER_TIME before sending to shards (#24660)

[BACKPORT-20038](https://jira.mongodb.org/browse/BACKPORT-20038) from
the original ticket. There are a few additional artifacts that had to be
backported as well. Hence a non-trivial (but still simple) backport.

[Original
PR](https://github.com/mongodb/mongo/commit/47ca1ad4734d41c13d783507eb2e89dfdaaddc18)

[Evergreen
patch](https://spruce.mongodb.com/version/6690ff4d7865cb00079a8997/tasks?sorts=STATUS%3AASC%3BBASE_STATUS%3ADESC)

---------

Co-authored-by: henrinikku <henri.nikku@mongodb.com>
GitOrigin-RevId: 05f103196f431f4d115b772060453d8bc456c6f1